--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "test": "NODE_ENV=test mocha --require ts-node/register --require source-map-support/register src/**/*.test.ts"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1"
   },
@@ -19,6 +18,7 @@
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "mocha": "^9.0.3",
+    "mocha-param": "^2.0.1",
     "nodemon": "^2.0.12",
     "sinon": "^11.1.2",
     "source-map-support": "^0.5.19",
